--- a/package.json
+++ b/package.json
@@ -5,17 +5,23 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon src/app.js"
+    "start:dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.18.0",
+    "handlebars": "^4.7.8",
     "mongoose": "^8.1.0",
+    "mongoose-paginate-v2": "^1.8.0",
+    "session-file-store": "^1.5.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
   }
