--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
@@ -21,6 +22,9 @@
     "handlebars": "^4.7.8",
     "mongoose": "^8.1.0",
     "mongoose-paginate-v2": "^1.8.0",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
