--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@faker-js/faker": "^8.4.1",
 		"bcrypt": "^5.1.1",
 		"bootstrap": "^5.3.2",
 		"connect-mongo": "^5.1.0",
