--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start:dev": "nodemon app.js"
+		"start:dev": "set USER=dev && nodemon app.js",
+		"start:prod": "set USER=prod && nodemon app.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -33,7 +34,8 @@
 		"session-file-store": "^1.5.0",
 		"socket.io": "^4.7.2",
 		"socket.io-client": "^4.7.2",
-		"uuid": "^9.0.1"
+		"uuid": "^9.0.1",
+		"winston": "^3.12.0"
 	},
 	"Transform": "AWS::Serverless-2016-10-31",
 	"Resources": {
